Correct content shifting when opening modal

--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ body {
     color: #3d3d3d;
     width: 100%;
     height: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
     overflow-y: scroll;
 }
 
@@ -371,7 +371,9 @@ figure {
     position: relative;
     width: 80%;
     margin: 0 auto;
+    left: 0 !important;
     padding: 2em 0;
+/*    padding: 0px !important;*/
 }
 
 @media screen and (max-width: 768px) {
@@ -730,6 +732,21 @@ body.offcanvas .fh5co-nav-toggle {
 
 /**********************************************************/
 /* Modal Content */
+
+/*
+.modal {
+  position: fixed !important;  
+}
+*/
+
+.modal-open {
+  position: fixed !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+    overflow-y: scroll;
+    margin: 0px !important;
+}
 
 .modal-content {
     position: static;
